kubernetes-fundamentals/02-deploy-application-using-kubernetes-objects/content/pacman-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman
  labels:
    app: pacman
    app.kubernetes.io/component: pacman
    app.kubernetes.io/instance: pacman
    app.kubernetes.io/name: pacman
    app.kubernetes.io/part-of: pacman
    app.openshift.io/runtime-version: latest

spec:
  path: "/"
  to:
    kind: Service
    name: pacman
